--- a/css/common.css
+++ b/css/common.css
@@ -1,15 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
 }
-:root{
+
+:root {
     font-family: "DotGothic16", sans-serif;
     --main-color: black;
-    --accent-color: rgb(50,206,211);
+    --accent-color: rgb(50, 206, 211);
 }
 
-.container{
+.container {
     max-width: 980px;
     margin: auto;
+}
+
+img {
+    display: block;
+    width: 100%;
 }
