--- a/css/header.css
+++ b/css/header.css
@@ -1,38 +1,44 @@
-.header{
+.header {
     background-color: var(--accent-color);
 }
 
-.header__nav_logo{
+.header__nav_logo {
     font-size: 3.5rem;
     text-align: center;
     text-transform: uppercase;
     color: var(--main-color)
 }
-.header__nav_menu_item{
-color: var(--main-color);
-text-transform: uppercase;
-text-decoration: none;
+
+.header__nav_menu_item {
+    color: var(--main-color);
+    text-transform: uppercase;
+    text-decoration: none;
 }
-.header__nav_menu{
+
+.header__nav_menu {
     display: flex;
     flex-direction: column;
     padding: 5px;
 }
-.header__nav_menu_item:hover{
+
+.header__nav_menu_item:hover {
     font-weight: bold;
 }
+
 @media (min-width: 600px) {
-    .header__nav{
-       display: flex; 
+    .header__nav {
+        display: flex;
     }
-    .header__nav_menu{
+
+    .header__nav_menu {
         flex-direction: row;
         align-items: center;
         justify-content: space-around;
         flex: 1;
     }
 }
-.header__banner{
+
+.header__banner {
     background-image: url(../img/baby-yoda.svg);
     background-size: cover;
     background-position: center;
@@ -40,21 +46,24 @@ text-decoration: none;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:center ;
+    justify-content: center;
     color: var(--accent-color);
 }
+
 .header-bunner-buttom {
     padding: 7px;
     margin: 0 0.3em 0.3em 0;
     border: solid white;
-    border-radius: 0.12em;;
+    border-radius: 0.12em;
+    ;
     color: white;
     text-decoration: none;
     transition: color 0.8s;
     background-color: transparent;
     width: 100px;
 }
-.header-bunner-buttom:hover{
+
+.header-bunner-buttom:hover {
     color: black;
     background-color: white;
     cursor: pointer;
